// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots Pages/Preferences/Node List Node Element 1`] = `
<div
  className="css-paub65-NodeContainer e1k5prvz2"
>
  <div
    className="css-noe96r-NodeHeader e1k5prvz1"
  >
    <div
      className="css-vwe0b-Circle e1k5prvz5"
    >
      <h6
        className="css-vdb9bk-Index e1k5prvz4 leafygreen-ui-11wdjex"
      >
        1
      </h6>
    </div>
    <h6
      className="css-b00ohd-NodeTitle e1k5prvz3 leafygreen-ui-11wdjex"
    >
      Download the Command-Line Client.
    </h6>
  </div>
  <div
    className="css-w6wgl7-ChildContainer e1k5prvz0"
  >
    <div
      style={
        Object {
          "backgroundColor": "red",
          "height": 300,
          "width": 500,
        }
      }
    >
      Test
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots Pages/Preferences/Node List Node List Full 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="css-g6qfa2-NodeContainer eb6wkmd0"
  >
    <div
      className="css-paub65-NodeContainer e1k5prvz2"
    >
      <div
        className="css-noe96r-NodeHeader e1k5prvz1"
      >
        <div
          className="css-vwe0b-Circle e1k5prvz5"
        >
          <h6
            className="css-vdb9bk-Index e1k5prvz4 leafygreen-ui-11wdjex"
          >
            1
          </h6>
        </div>
        <h6
          className="css-b00ohd-NodeTitle e1k5prvz3 leafygreen-ui-11wdjex"
        >
          Download the Command-Line Client.
        </h6>
      </div>
      <div
        className="css-w6wgl7-ChildContainer e1k5prvz0"
      >
        <div
          style={
            Object {
              "backgroundColor": "red",
              "height": 300,
              "width": 500,
            }
          }
        >
          Test
        </div>
      </div>
    </div>
    <div
      className="css-paub65-NodeContainer e1k5prvz2"
    >
      <div
        className="css-noe96r-NodeHeader e1k5prvz1"
      >
        <div
          className="css-vwe0b-Circle e1k5prvz5"
        >
          <h6
            className="css-vdb9bk-Index e1k5prvz4 leafygreen-ui-11wdjex"
          >
            2
          </h6>
        </div>
        <h6
          className="css-b00ohd-NodeTitle e1k5prvz3 leafygreen-ui-11wdjex"
        >
          Move the command-line client to somewhere in your PATH. On many systems this will be /usr/local/bin.
        </h6>
      </div>
      <div
        className="css-w6wgl7-ChildContainer e1k5prvz0"
      >
        <div
          style={
            Object {
              "backgroundColor": "red",
              "height": 300,
              "width": 500,
            }
          }
        >
          Test
        </div>
      </div>
    </div>
  </div>
</div>
`;
